# ms_and_prototype_and_measurements

./: .gitignore  README.md
Measurements/: README-cn.md  README.md  local.properties  settings.gradle
Measurements/app/: build.gradle
Measurements/app/src/main/: AndroidManifest.xml
Measurements/encrypt/: build.gradle
Measurements/encrypt/src/main/: AndroidManifest.xml
Model/notebooks/: bandwidth_graphs.ipynb  bitlist_size_graphs.ipynb  broadcast_bandwidth.ipynb  c_elgamal_timing_calc.ipynb  clean_timing_logs.ipynb  delivery_graphs.ipynb  figures.mplstyle  process_logs.ipynb  rates_graphs.ipynb  small messages traffic time series.ipynb  small_messages_DS_sizes.ipynb  small_messages_bandwidth.ipynb  small_messages_delivery.ipynb  uniform distribution.ipynb
Model/notebooks/cryptography_timings/: c_aes_logs.txt  c_elgamal_logs.txt  decrypt_logs.txt  encrypt_logs.txt
Model/notebooks/cryptography_timings/hybrid/: pixel1.txt  pixel1_fixed.txt  pixel4.txt  pixel4_fixed.txt
Model/python/: Device.py  Grid.py  Messages.py  Simulator.py  constants.py  gen.sh  gen2.sh  helpers.py  main.py  profiler.py  rename.sh  test.py
Model/python/processing/: process_logs.py
Model/python/processing/logs/: experiments.csv
Model/python/profiling/: compare.py
Model/python/testing/: Device_Test.py  Grid_Test.py  Messages_Test.py  Simulator_Test.py  helpers_Test.py
Proof_of_Concept/: build.gradle  settings.gradle
Proof_of_Concept/app/: build.gradle
Proof_of_Concept/app/c/: CMakeLists.txt  c-verter.c
Proof_of_Concept/gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
